#051-Pagina-individuala-produs-final

--- a/src/app/home/echipamente/echipament/Echipament.module.css
+++ b/src/app/home/echipamente/echipament/Echipament.module.css
@@ -109,6 +109,8 @@
     width: 80%;
     box-sizing: border-box;
 
+    margin-top: -20px;
+
     font-size: 18px;
     font-weight: 500;
     color: var(--foreground);
