--- a/src/app/home/echipamente/echipament/Echipament.module.css
+++ b/src/app/home/echipamente/echipament/Echipament.module.css
@@ -106,7 +106,7 @@
 }
 
 .pageDescription {
-    width: 80%;
+    width: 70%;
     box-sizing: border-box;
 
     margin-top: -20px;
@@ -121,7 +121,7 @@
     box-sizing: border-box;
 
     margin-top:var(--font-size-lg);
-    padding-right: 220px;
+    padding-right: 30%;
 
     display: flex;
     flex-direction: row; 
@@ -131,7 +131,7 @@
 
 .actionButton {
     height: 40px;
-    width: 220px; 
+    width: 80%; 
 
     padding: 20px;
 
@@ -228,7 +228,7 @@
   }
 
 .dropdownsContainer {
-    width: 500px;
+    width: 70%;
 
     margin-top: 10px;
 
