--- a/src/app/home/components/MobileNavbar.module.css
+++ b/src/app/home/components/MobileNavbar.module.css
@@ -2,7 +2,7 @@
 
 
 .container {
-    width: 90vw;
+    /* width: calc(100vw - 15px - 15px); */ /* for side padding */
     height: 67px;
 
     display: none;
@@ -11,7 +11,7 @@
 
     position: fixed;
     bottom: 5vh;
-    left: 5%;
+    left: 15px; right: 15px;
     
     border: 1px solid #EDEDEE;
     border-radius: 24px;
