--- a/src/app/home/components/TabletHeader.module.css
+++ b/src/app/home/components/TabletHeader.module.css
@@ -1,13 +1,12 @@
 
 
 .headerContainer {
-    padding: 5px 10px;
+    padding: 0 10px;
 
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
 
-    border-bottom: 1pt solid 
 }
 
