--- a/src/app/home/echipamente/echipament/Echipament.module.css
+++ b/src/app/home/echipamente/echipament/Echipament.module.css
@@ -1,19 +1,15 @@
 .container {
-    height: 100vh; 
-    box-sizing: border-box;
-
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     gap: 45px;
 
-    overflow: auto; 
+    overflow: visible; 
 }
 
 .content {
     width: 100%;
     flex: 1;
-    box-sizing: border-box;
     flex-grow: 1;
 
     position: relative;
@@ -26,7 +22,6 @@
 }
 
 .breadcrumbs {
-    box-sizing: border-box;
 
     margin-top: 10px;
     margin-bottom: 10px;
@@ -56,8 +51,7 @@
 
 
 .layout {
-    box-sizing: border-box;
-
+    
     display: flex;
     flex-direction: row;
     gap: 20px; 
@@ -66,11 +60,9 @@
 .imageContainer {
     width: 400px; 
     height: 400px;
-    box-sizing: border-box;
     flex-shrink: 0;  
 
-    margin-right: 20px;
-    margin-top: 10px;
+    margin: 5px 10px;
 
     border: 1px solid #f4f4f4; 
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
@@ -88,9 +80,8 @@
 }
 
 .descriptionContainer {
-    max-height: 80vh;
+    max-width: 1000px;
 
-    padding-right: 8px;
 
     display: flex;
     flex-direction: column;
@@ -106,8 +97,7 @@
 }
 
 .pageDescription {
-    width: 70%;
-    box-sizing: border-box;
+    width: 100%;
 
     margin-top: -20px;
 
@@ -118,14 +108,12 @@
 }
 
 .buttonGroup {
-    box-sizing: border-box;
 
     margin-top:var(--font-size-lg);
-    padding-right: 30%;
 
     display: flex;
     flex-direction: row; 
-    gap: 60px;
+    gap: 7%;
     justify-content: flex-end;
 }
 
@@ -133,7 +121,7 @@
     height: 40px;
     width: 80%; 
 
-    padding: 20px;
+    padding: 25px 30px;
 
     display: flex;
     align-items: center;
@@ -228,7 +216,6 @@
   }
 
 .dropdownsContainer {
-    width: 70%;
 
     margin-top: 10px;
 
@@ -386,4 +373,27 @@
 
 .navArrow:hover {
     background-color: rgba(255, 255, 255, 0.9);
+}
+
+@media (max-width: 860px) {
+    .layout {
+        flex-flow: column nowrap;
+    }
+    .thumbnailsContainer {
+        width: 100%;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .carouselContainer {
+        width: fit-content;
+    }
+    .productImageSection {
+        align-items: center;
+    }
+    .imageContainer {
+        width: 90vw;
+        max-width: 576px;
+        height: 90vw;
+        max-height: 576px;
+    }
 }
