--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,10 @@
   --foreground: #09090B;
   --border-gray: #e4e4e7;
   --text-gray:  #71717A;
+  --busy-red: #FF426B;
   --font-size-lg: 30px;
   --font-size-md: 24px;
+  --font-size-base: 18px;
   --font-size-sm: 16px;
   --font-size-xs: 14px;
   --font-family: 'Inter', sans-serif;
