--- a/src/app/home/inchiriere/formInchiriere.module.css
+++ b/src/app/home/inchiriere/formInchiriere.module.css
@@ -50,7 +50,15 @@
     flex-wrap: nowrap;
     gap: 28px;
 }
-
+.calendarContainer 
+{
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 .formButtonContainer 
 {
     width: 100%;
