--- a/src/lib/components/calendar/Calendar.module.css
+++ b/src/lib/components/calendar/Calendar.module.css
@@ -1,7 +1,9 @@
 
 .calendar {
-    width: 426px;
-    height: 398px;
+    width: 100%;
+    height: 100%;
+    max-width: 426px;
+    max-height: 398px;
 
     padding: 24px;
 
@@ -94,7 +96,13 @@
     border-radius: 6px;
 }
 .selectedDay {
-    border: 2px solid black;
+    border: 2px 0px solid black;
+}
+.selectedPrimary {
+    border: 2px solid var(--foreground);
+}
+.selectedRightEdge {
+    border-right: 2px solid var(--foreground);
 }
 .currentMonthDay {
     background-color: var(--background);
