--- a/src/app/home/homeLayout.module.css
+++ b/src/app/home/homeLayout.module.css
@@ -1,9 +1,8 @@
 
 .layoutContainer {
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
 
-    overflow: hidden;
     padding: 10px;
 
     display: flex;
@@ -22,45 +21,22 @@
 .contentWrapper {
     padding: 5px 0;
 }
-.showStartTablet {
-    width: 100%;
-    
-    padding: 10px 0;
-    
-    flex-flow: column nowrap;
-    gap: 10px;
-
-}
-.showStartTablet {
-    display: none;
-}
 
 @media (max-width: 1150px) {
-    .showDesktopOnly {
-        display: none;
-    }
-    .showStartTablet {
-        display: flex;
-        margin: 0;
-        padding: 0;
-    }
     .layoutContainer {
-        padding: 0px 0px 130px 0px;
         flex-direction: column;
         gap: 0px;
+        padding-bottom: 0px;
+    }
+    .mainContainer {
+        padding-bottom: 130px;
     }
     .tabletPadding {
         padding: 5px 10px;
     }
 }
 @media (max-width: 860px) {
-    .showDesktop {
-        display: none;
-    }
-    .layoutContainer {
-       padding: 0px 0px calc(5vh + 70px) 0px;
-    }
     .mainContainer {
-        padding: 10px 20px;
+        padding: 10px 20px 115px 10px;
     }
 }
