--- a/src/lib/components/home/Sidebar.module.css
+++ b/src/lib/components/home/Sidebar.module.css
@@ -1,6 +1,8 @@
 .sidebar {
   width: 300px;
   height: 100%;
+  max-height: calc(100vh - 20px);
+  
   border: 1px solid var(--border-gray);
   border-radius: var(--font-size-sm);
   background: var(--background);
