--- a/src/app/home/homeLayout.module.css
+++ b/src/app/home/homeLayout.module.css
@@ -3,19 +3,22 @@
     width: 100%;
     height: 100vh;
 
-    padding: 10px;
-
     display: flex;
     flex-flow: row nowrap;
     gap: 10px;
 }
+.layoutContainer > div:not(.mainContainer) {
+    margin: 10px;
+}
 
 .mainContainer {
-    min-width: 0;
-
     flex-grow: 1;
     
+    min-width: 0;
+
+    margin-top: 5px;
     padding: 10px;
+
     overflow-y: scroll;
 }
 .contentWrapper {
@@ -24,9 +27,10 @@
 
 @media (max-width: 1150px) {
     .layoutContainer {
+        padding-bottom: 0px;
+
         flex-direction: column;
         gap: 0px;
-        padding-bottom: 0px;
     }
     .mainContainer {
         padding-bottom: 130px;
