--- a/src/app/auth/confirm-mail/confirmMail.module.css
+++ b/src/app/auth/confirm-mail/confirmMail.module.css
@@ -1,131 +1,130 @@
 .container {
-  width: 480px;
+	width: 480px;
 
-  padding: 20px;
+	padding: 20px;
 
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  
-  gap: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+
+	gap: 20px;
 }
 
 .title {
-  height: auto;
+	height: auto;
 
-  margin-bottom: 10px;
+	margin-bottom: 10px;
 
-  text-align: left;
+	text-align: left;
 
-  font-size: var(--font-size-lg);
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: var(--foreground);
+	font-size: var(--font-size-lg);
+	line-height: 24px;
+	letter-spacing: 0%;
+	color: var(--foreground);
 }
 
 .subtitle {
-  width: 100%;
-  height: auto;
+	width: 100%;
+	height: auto;
 
-  margin-bottom: 26px;
+	margin-bottom: 26px;
 
-  text-align: left;
-
-  font-size: var(--font-size-sm);
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: var(--text-gray);
+	text-align: left;
+	font-size: var(--font-size-sm);
+	line-height: 24px;
+	letter-spacing: 0%;
+	color: var(--text-gray);
 }
 
 .resendContainer {
-  width: 100%;
+	width: 100%;
 
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .resendText {
-  height: 24px;
+	height: 24px;
 
-  margin-bottom: 10px;
+	margin-bottom: 10px;
 
-  text-align: left;
+	text-align: left;
 
-  font-size: var(--font-size-sm);
-  line-height: 24px;
-  color: var(--text-gray);
+	font-size: var(--font-size-sm);
+	line-height: 24px;
+	color: var(--text-gray);
 }
 
 .resendButton {
-  width: 100%;
-  height: 64px;
+	width: 100%;
+	height: 64px;
 
-  padding: 10px 16px;
+	padding: 10px 16px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-  border: 1px solid var(--border-gray);
-  border-radius: 8px;
-  background-color: var(--background);
+	border: 1px solid var(--border-gray);
+	border-radius: 8px;
+	background-color: var(--background);
 
-  text-align: center;
-  font-size: var(--font-size-sm);
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #09090B;
+	text-align: center;
+	font-size: var(--font-size-sm);
+	font-weight: 600;
+	line-height: 24px;
+	letter-spacing: 0%;
+	color: #09090b;
 
-  cursor: pointer;
-  box-sizing: border-box;
-  transition: background-color 0.2s ease;
+	cursor: pointer;
+	box-sizing: border-box;
+	transition: background-color 0.2s ease;
 }
 
 .resendButton:hover {
-  background-color: #e0e0e0;
+	background-color: #e0e0e0;
 }
 
 .backToLogin {
-  width: 100%;
+	width: 100%;
 }
 
 .backToLoginButton {
-  width: 100%;
-  height: 64px;
+	width: 100%;
+	height: 64px;
 
-  padding: 10px 16px;
+	padding: 10px 16px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-  border: none;
-  border-radius: 8px;
-  background-color: var(--foreground);
+	border: none;
+	border-radius: 8px;
+	background-color: var(--foreground);
 
-  text-align: center;
-  font-size: var(--font-size-sm);
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #FAFAFA;
+	text-align: center;
+	font-size: var(--font-size-sm);
+	font-weight: 600;
+	line-height: 24px;
+	letter-spacing: 0%;
+	color: #fafafa;
 
-  cursor: pointer;
-  box-sizing: border-box;
-  transition: background-color 0.2s ease;
+	cursor: pointer;
+	box-sizing: border-box;
+	transition: background-color 0.2s ease;
 }
 
 .backToLoginButton:hover {
-  background-color: #333;
+	background-color: #333;
 }
 
 .timer {
-  margin-left: 5px;
+	margin-left: 5px;
 
-  font-size: var(--font-size-sm);
-  line-height: 24px;
-  letter-spacing: 0%;
-  color: #888;
+	font-size: var(--font-size-sm);
+	line-height: 24px;
+	letter-spacing: 0%;
+	color: #888;
 }
