--- a/src/app/auth/extra-data-required/registerPage.module.css
+++ b/src/app/auth/extra-data-required/registerPage.module.css
@@ -1,11 +1,10 @@
-.registerContainer 
-{
-    width: 600px;
-    
-    margin: 0 20px;
+.registerContainer {
+	width: 600px;
 
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    gap: 28px;
+	margin: 0 20px;
+
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	gap: 28px;
 }
