#endsp2ref back button refactor

--- a/src/app/auth/reset-password-intentionat/resetPassword.module.css
+++ b/src/app/auth/reset-password-intentionat/resetPassword.module.css
@@ -13,7 +13,7 @@
 	background-color: white;
 }
 
-.backButton {
+.backButtonWrapper {
 	position: absolute;
 	top: 20px;
 	left: 20px;
@@ -31,17 +31,6 @@
 	border-radius: 80px;
 
 	cursor: pointer;
-}
-
-.backArrow {
-	width: 17px;
-	height: 10px;
-
-	position: relative;
-	top: 3px;
-	left: 1px;
-
-	transform: rotate(90deg);
 }
 
 .formWrapper {
