--- a/src/app/home/echipamente/echipament/Echipament.module.css
+++ b/src/app/home/echipamente/echipament/Echipament.module.css
@@ -1,26 +1,3 @@
-.container {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
-	gap: 45px;
-
-	overflow: visible;
-}
-
-.content {
-	width: 100%;
-	flex: 1;
-	flex-grow: 1;
-
-	position: relative;
-
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-
-	background-color: var(--background);
-}
-
 .layout {
 	display: flex;
 	flex-direction: row;
@@ -28,19 +5,20 @@
 }
 
 .backButtonWrapper {
+	width: 30px;
+	height: 30px;
+	flex-shrink: 0;
+
 	display: flex;
 	flex-direction: row;
-	align-items: flex-start;
-	gap: 10px;
+	align-items: center;
+	justify-content: center;
+
+	border-radius: 100%;
+	box-shadow: 0px 2px 2px 0px #000e330d;
+
+	box-sizing: border-box;
 }
-
-.backArrow {
-	width: 20px;
-	height: 20px;
-
-	cursor: pointer;
-}
-
 
 .descriptionContainer {
 	max-width: 1000px;
