--- a/src/lib/components/home/CerereListing.module.css
+++ b/src/lib/components/home/CerereListing.module.css
@@ -5,7 +5,9 @@
     align-items: center;
     padding: 12px 24px;
 
-    border-radius: 12px;
+    margin-bottom: 20px;
+
+    border-radius: 6px;
 
     background-color: #fecdd3;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -17,24 +19,30 @@
     color: var(--foreground);
   }
   
-  .label {
-    padding: 12px 12x;
+  .greenLabel {
     border-radius: 8px;
+    padding: 10px 12px;
 
-    background-color: #bfdbfe;
-    color: black;
+    background-color: #357a47;
+    color: white;
     font-size: var(--font-size-md);
-    font-weight: bold;
+    font-weight: 700;
+  }
+
+  .redLabel {
+    border-radius: 8px;
+    padding: 10px 12px;
+
+    background-color: #e43e3e;
+    color: white;
+    font-size: var(--font-size-md);
+    font-weight: 700;
   }
   
 
   @media (max-width: 1150px) {
     .container {
       padding: 10px 20px;
-    }
-    .title,
-    .label {
-      padding: 10px 12px;
     }
   }
 
@@ -44,7 +52,11 @@
       padding: 12px 12px;
     }
     .title,
-    .label {
+    .greenLabel {
+      font-size: var(--font-size-sm);
+      padding: 8px 10px;
+    }
+    .redLabel {
       font-size: var(--font-size-sm);
       padding: 8px 10px;
     }
