--- a/src/lib/components/home/CerereListing.module.css
+++ b/src/lib/components/home/CerereListing.module.css
@@ -6,8 +6,9 @@
     padding: 12px 24px;
 
     margin-bottom: 20px;
-
     border-radius: 6px;
+
+    cursor: pointer;
 
     background-color: #fecdd3;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
