--- a/src/lib/components/home/CerereListing.module.css
+++ b/src/lib/components/home/CerereListing.module.css
@@ -19,25 +19,22 @@
     font-weight: bold;
     color: var(--foreground);
   }
-  
-  .greenLabel {
+
+  .label {
     border-radius: 8px;
     padding: 10px 12px;
 
-    background-color: #357a47;
     color: white;
     font-size: var(--font-size-md);
     font-weight: 700;
   }
+  
+  .greenLabel {
+    background-color: #357a47;
+  }
 
   .redLabel {
-    border-radius: 8px;
-    padding: 10px 12px;
-
     background-color: #e43e3e;
-    color: white;
-    font-size: var(--font-size-md);
-    font-weight: 700;
   }
   
 
@@ -53,11 +50,7 @@
       padding: 12px 12px;
     }
     .title,
-    .greenLabel {
-      font-size: var(--font-size-sm);
-      padding: 8px 10px;
-    }
-    .redLabel {
+    .label {
       font-size: var(--font-size-sm);
       padding: 8px 10px;
     }
