--- a/src/lib/components/home/echipamente/ProductCard.module.css
+++ b/src/lib/components/home/echipamente/ProductCard.module.css
@@ -1,23 +1,55 @@
 .product-card-wrapper.small {
-  width: 220px;
+  width: 100%;
+}
+.product-card-wrapper {
+  height: 366px;
+  
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
 }
 
 .product-card.small {
-  width: 220px;
-  height: 320px;
+  width: 100%;
   padding: 8px;
   gap: 8px;
 }
+.product-image-container {
+  width: 200px;
+  height: 200px;
 
-.product-card-wrapper.large {
-  width: 255px;
+  align-self: center;
+
+  overflow: hidden;
 }
+.product-image-wrapper {
+	width: 100%;
+	height: 100%;
 
-.product-card.large {
-  width: 255px;
-  height: 366px;
+	position: relative;
+
+	border: 0px solid #f4f4f4;
+}
+.product-image {
+	width: 100%;
+	height: 100%;
+
+	border-radius: 8px;
+
+	object-fit: cover;
+}
+.product-card {
+  height: 400px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+
   padding: 12px;
   gap: 12px;
+
+  border-radius: 10px;
+
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.4);
 }
 
 .product-card img {
@@ -25,6 +57,7 @@
   height: auto;
   object-fit: contain;
   border-radius: 4px;
+  dragging: none;
 }
 
 .product-card h3 {
@@ -79,7 +112,6 @@
   text-decoration: none;
   font-family: 'Inter', sans-serif;
   width: 100%;
-  max-width: 254px;
   height: 41px;
   padding: 12px 16px;
   font-size: 14px;
@@ -105,7 +137,12 @@
 .product-subtext span {
   color: #FF0000;
 }
-
+.faculty-label-wrapper {
+  position: absolute;
+  flex-shrink: 0;
+  height: 25px !important;
+  bottom: 20%;
+}
 .faculty-label {
   font-size: 12px;
   font-weight: 400;
@@ -120,10 +157,6 @@
 }
 
 @media (max-width: 768px) {
-  .product-card {
-    width: 90vw;
-  }
-
   .details-button {
     max-width: 90%;
   }
