--- a/src/lib/components/home/echipamente/SearchAndFilter.module.css
+++ b/src/lib/components/home/echipamente/SearchAndFilter.module.css
@@ -25,6 +25,8 @@
 	flex-flow: row wrap;
 	justify-content: space-between;
 	align-items: flex-start;
+
+  gap: 15px;
 }
 .componentTitle {
 	font-size: var(--font-size-lg);
