--- a/src/app/home/confirmare-decizie-admin/confirmDecisionAdmin.module.css
+++ b/src/app/home/confirmare-decizie-admin/confirmDecisionAdmin.module.css
@@ -1,24 +1,30 @@
 .container {
+  height: 90vh;
+  width: 100%;
+
+  padding: 0px 100px;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40px;
+
   background-color: var(--background);
   font-family: var(--font-family);
-  padding: 0px 100px; 
-  height: 90vh;
 }
 
 .contentBox {
-  background-color: #ffd799;
   width: 50%;
-  height: 100%;  
+  height: 100%;
+  min-height: 300px;
+
   padding: 100px 80px;
-  border-radius: 8px;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 300px;
+
+  background-color: #ffd799;
+  border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
