--- a/src/app/home/confirmare-decizie-admin/confirmDecisionAdmin.module.css
+++ b/src/app/home/confirmare-decizie-admin/confirmDecisionAdmin.module.css
@@ -1,8 +1,29 @@
+.layout {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.backButtonWrapper {
+  width: 30px;
+  height: 30px;
+  flex-shrink: 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 100%;
+  box-shadow: 0px 2px 2px 0px #000e330d;
+  box-sizing: border-box;
+}
+
 .container {
-  height: 90vh;
+  height: 89vh;
   width: 100%;
 
-  padding: 0px 100px;
+  padding: 0px;
 
   display: flex;
   justify-content: center;
@@ -13,11 +34,11 @@
 }
 
 .contentBox {
-  width: 50%;
+  width: 70%;
   height: 100%;
-  min-height: 300px;
+  min-height: 200px;
 
-  padding: 100px 80px;
+  padding: 5vh 5vw;
 
   display: flex;
   justify-content: center;
@@ -26,6 +47,19 @@
   background-color: #ffd799;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+}
+
+@media (max-width: 1150px) {
+  .contentBox {
+    width: 90%;
+  }
+}
+
+@media (max-width: 860px) {
+  .contentBox {
+    width: 95%;
+    padding: 3vh 3vw;
+  }
 }
 
 .message {
